<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="@color/primaryColor"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/login_text_colour" />

    <TextView
        android:id="@+id/submit_text"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="@color/login_button_colour"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/try_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="@string/try_text"
        android:layout_marginEnd="16dp"
        android:background="@color/colour_3"
        android:textColor="@color/black" />

</LinearLayout>