<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background">


    <androidx.cardview.widget.CardView
        android:id="@+id/hospital_card_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="spUsage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/image_background"
                android:padding="10dp"
                android:src="@drawable/ic_public_hospital"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hospital_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/hospital_name"
                android:textColor="@color/login_text_colour"
                android:textSize="17dp"
                app:layout_constraintStart_toEndOf="@+id/image_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/dot_image"
                android:layout_width="5dp"
                android:background="@drawable/dot_image_background"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/image_icon"
                app:layout_constraintTop_toBottomOf="@+id/hospital_name"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/hospital_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/public_value"
                android:textColor="@color/colour_grey"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@+id/dot_image"
                app:layout_constraintTop_toBottomOf="@+id/hospital_name" />

            <TextView
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/days_number"
                android:textColor="@color/colour_grey"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@+id/hospital_type"
                app:layout_constraintTop_toBottomOf="@+id/hospital_name" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/in_progress"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>